refactor : topic 별 알림용 법안 정보(billId, billName) 구성하도록 리팩토링